nullaway_error_938b2325-da93-4319-b7ad-5bd98822d904.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/emitters/Emitter.java:374: error: [NullAway] dereferenced expression this.data().getTexts() is @Nullable
        if (this.data().getTexts().isEmpty()) {
                                  ^
    (see http://t.uber.com/nullaway )
